[tool.poetry]
name = "python-git-september"
version = "0.1.0"
description = ""
authors = ["Chaisuu <Kfire13@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.11.2"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
